--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
+    #img img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 60%; 
+    
+        button{
+            background: burlywood
+        }
+
+
+    }
+
+
 
 }
